--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
       <symbol xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 23 18" id="youtube">
         <path d="M18.94.356H3.507C1.647.356.333 1.95.333 3.756V13.85c0 1.913 1.314 3.506 3.174 3.506H19.16c1.642 0 3.174-1.593 3.174-3.4v-10.2c-.219-1.806-1.532-3.4-3.393-3.4ZM7.995 12.894V4.819l7.333 4.037-7.333 4.038Z"></path>
       </symbol>
+      <symbol xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 17" id="favorites">
+        <path d="M8.9 17c-.3 0-.6-.1-.8-.4-5.4-6.1-6.7-7.5-7-7.9C.4 7.8 0 6.6 0 5.4 0 2.4 2.4 0 5.5 0 6.8 0 8 .5 9 1.3 10 .5 11.3 0 12.5 0c3 0 5.5 2.4 5.5 5.4 0 1.3-.5 2.5-1.3 3.4l-7 7.9c-.2.2-.4.3-.8.3Zm-6-9.5c.3.4 3.5 4 6.1 6.9l6.2-7c.5-.5.7-1.2.7-2 0-1.8-1.5-3.3-3.3-3.3-1 0-2 .5-2.7 1.3-.3.3-.6.4-.9.4-.3 0-.6-.2-.8-.4-.7-.8-1.7-1.3-2.7-1.3-1.8 0-3.3 1.5-3.3 3.3-.1.9.3 1.6.7 2.1-.1 0-.1 0 0 0Z"/>
+      </symbol>
+      <symbol xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 19 19" id="search">
+        <path d="m18.5 17.008-3.7-3.68c1-1.292 1.7-2.983 1.7-4.872C16.5 4.08 12.9.5 8.5.5s-8 3.68-8 8.055c0 4.376 3.6 7.956 8 7.956 1.8 0 3.5-.597 4.9-1.69l3.7 3.679 1.4-1.492Zm-10-2.486c-3.3 0-6-2.685-6-5.967 0-3.282 2.7-5.967 6-5.967s6 2.685 6 5.967c0 3.282-2.7 5.967-6 5.967Z"/>
+      </symbol>
     </svg>
 
     <header class="main-header container" data-test="header">
@@ -61,16 +67,16 @@
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
           <a class="navigation-link" href="#">
-            <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" viewBox="0 0 19 19" aria-hidden="true" focusable="false">
-              <path d="m18.5 17.008-3.7-3.68c1-1.292 1.7-2.983 1.7-4.872C16.5 4.08 12.9.5 8.5.5s-8 3.68-8 8.055c0 4.376 3.6 7.956 8 7.956 1.8 0 3.5-.597 4.9-1.69l3.7 3.679 1.4-1.492Zm-10-2.486c-3.3 0-6-2.685-6-5.967 0-3.282 2.7-5.967 6-5.967s6 2.685 6 5.967c0 3.282-2.7 5.967-6 5.967Z"/>
+            <svg class="search-icon" width="19" height="19" aria-hidden="true" focusable="false">
+              <use xlink:href="#search"></use>
             </svg>
             <span class="visually-hidden">Поиск</span>
           </a>
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="#">
-            <svg class="favorites-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="17" fill="currentColor" viewBox="0 0 18 17" aria-hidden="true" focusable="false">
-              <path fill="#000" d="M8.9 17c-.3 0-.6-.1-.8-.4-5.4-6.1-6.7-7.5-7-7.9C.4 7.8 0 6.6 0 5.4 0 2.4 2.4 0 5.5 0 6.8 0 8 .5 9 1.3 10 .5 11.3 0 12.5 0c3 0 5.5 2.4 5.5 5.4 0 1.3-.5 2.5-1.3 3.4l-7 7.9c-.2.2-.4.3-.8.3Zm-6-9.5c.3.4 3.5 4 6.1 6.9l6.2-7c.5-.5.7-1.2.7-2 0-1.8-1.5-3.3-3.3-3.3-1 0-2 .5-2.7 1.3-.3.3-.6.4-.9.4-.3 0-.6-.2-.8-.4-.7-.8-1.7-1.3-2.7-1.3-1.8 0-3.3 1.5-3.3 3.3-.1.9.3 1.6.7 2.1-.1 0-.1 0 0 0Z"/>
+            <svg class="favorites-icon" width="18" height="17" aria-hidden="true" focusable="false">
+              <use xlink:href="#favorites"></use>
             </svg>
             <span class="visually-hidden">Избранное</span>
             <span class="favorites-badge">12</span>
@@ -116,11 +122,10 @@
           <li class="advantages-item">
               <h3 class="advantages-item-title">Мало туристов</h3>
               <p class="advantages-item-description">Большинство едет в Гранд Каньон и толпится там</p>
-
           </li>
           <li class="advantages-item advantages-item-media">
             <div class="advantages-item-media__text-wrapper">
-              <h3 class="advantages-item-title">Там есть мост дьявола</h3>
+              <h3 class="advantages-item-title">Там есть <br> мост дьявола</h3>
               <p class="advantages-item-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
             <img class="advantages-item-image" src="images/advantages/photo-2.jpg" width="800" height="385" alt="Мост дьявола">
@@ -137,15 +142,15 @@
         <ul class="features-list">
           <li class="features-item feature-house">
             <h3 class="features-item-title">Жильё</h3>
-            <p class="features-item-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            <p class="features-item-description">Рекомендуем пожить<br> в настоящем мотеле,<br> всё как в кино!</p>
           </li>
           <li class="features-item feature-food">
             <h3 class="features-item-title">Еда</h3>
-            <p class="features-item-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            <p class="features-item-description">Всегда заказывайте<br> топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
           <li class="features-item feature-gift">
             <h3 class="features-item-title">Сувениры</h3>
-            <p class="features-item-description">Не только китайского, но и настоящего местного производства!</p>
+            <p class="features-item-description">Не только китайского,<br> но и настоящего местного производства!</p>
           </li>
         </ul>
       </section>
@@ -154,7 +159,7 @@
         <h2 class="visually-hidden">Бронирование гостинницы</h2>
         <p class="booking-title">Заинтересовались?</p>
         <p class="booking-description">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="button button-primary button-huge booking-button" href="#">Поиск гостинницы в седоне</a>
+        <a class="button button-primary button-huge booking-button" href="#">Поиск гостиницы в седоне</a>
       </section>
 
       <section class="subscription subscription-decorated" data-test="subscribe">
